Improve app consistency and restaurant workflows